# hashin_shtrikman_mp

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Hashin-Shtrikman.ipynb  Hashin-Shtrikman_5.ipynb  LICENSE  README.md  consolidated_dict_01_31_2024_11_57_59  ga_params_class.py  generate_json.ipynb  generate_json.py  genetic_string_class.py  hashin-sktrikman-class.py  hashin_sktrikman_class.py  index.html  member_class.py  mkdocs.yml  mp_property_docs.json  mp_property_docs.yaml  objects.inv  oop_test.ipynb  orp_test.ipynb  orp_test.py  population_class.py  pyproject.toml  pytest.ini  sandbox.py  user_input.py  user_input_class.py
.chglog/: config.yml
.github/: draft-pdf.yml
.github/workflows/: draft-pdf.yml
about/: index.html
docs/: about.md  index.md
docs/examples/: example_n=3.ipynb  example_n=3_verbose.ipynb
docs/guides/: getting_started.ipynb  index.md
docs/reference/core/: genetic_algo.md  match_finder.md  member.md  optimizer.md  population.md  user_input.md  visualizer.md
examples/: example_n=3.ipynb  runtime_vs_n_phases.ipynb  test_consolidated_dict
examples/example_n=3/: index.html
examples/example_n=3_verbose/: index.html
examples/example_plotting/: index.html
examples/runtime_vs_n_phases/: index.html
getting_started/: index.html
guides/: index.html
guides/getting_started/: index.html
mkdocs/: mkdocs.yml
mkdocs/docs/: getting_started.md  index.md
mkdocs/docs/examples/: example_n=3.ipynb  runtime_vs_n_phases.ipynb
overrides/: custom.css
paper/: paper.md
paper/latex/: Refs.bib  character.sty  formatfile.cls  main.tex
paper/markdown/: paper.bib  paper.md  paper.tex
reference/core/genetic_algo/: index.html
reference/core/match_finder/: index.html
reference/core/member/: index.html
reference/core/optimizer/: index.html
reference/core/population/: index.html
reference/core/user_input/: index.html
reference/core/visualizer/: index.html
search/: search_index.json
src/core/: README  README.md  __init__.py  cmember.c  cmember.pyx  csetup.py  genetic_algo.h  genetic_algo.py  hash_table.c  hash_table.h  hash_table.py  match_finder.py  member  member.c  member.h  member.py  optimization.py  population.py  sandbox.py  setup.py  user_input.py  visualizer.py  yaml_parser.h
src/core/cbuilds/: cgenetic_algo.h  chash_table.c  chash_table.h  cmember.c  cmember.cpp  cmember.h  cmember.pyx  coptimization.cpp  coptimization.pyx  cpopulation.cpp  cpopulation.pyx  genetic_algo.h  hash_table.c  member.c  member.h  yaml_parser.c  yaml_parser.h
src/examples/: 3d_plotting_sandbox.ipynb  consolidated_dict_09_25_2024_09_53_38  consolidated_dict_09_25_2024_10_26_58  consolidated_dict_09_25_2024_10_44_49  consolidated_dict_09_25_2024_12_59_32  consolidated_dict_09_25_2024_13_41_03  elastic_carrier-transport.ipynb  example_n=3.ipynb  example_n=3.py  oop_test.ipynb  profile.html  profile.json  runtime_vs_n_phases.ipynb
src/hashin_shtrikman_mp.egg-info/: PKG-INFO  SOURCES.txt  requirements.txt  requires.txt  top_level.txt
src/hashin_shtrikman_mp/core/: __init__.py  genetic_algo.py  match_finder.py  member.py  optimization.py  optimizer.py  population.py  temp_mp_contribs_utils.py  user_input.py  utilities.py  visualizer.py
src/hashin_shtrikman_mp/log/: __init__.py  custom_logger.py
src/io/: cost_calculation_formulas.yaml  display_table_headers.yaml
src/io/inputs/: compile_cost_calculation_formulas.py  cost_calculation_formulas.yaml  display_table_headers.yaml  mp_property_docs.yaml
src/io/outputs/: consolidated_dict_09_25_2024_10_22_10  consolidated_dict_09_25_2024_10_38_54  consolidated_dict_09_25_2024_10_46_37  consolidated_dict_09_25_2024_10_58_54  consolidated_dict_09_25_2024_11_00_30  consolidated_dict_09_25_2024_11_19_08  consolidated_dict_09_25_2024_11_21_28  consolidated_dict_09_25_2024_11_30_30  consolidated_dict_09_25_2024_11_32_02  consolidated_dict_09_25_2024_11_37_59  consolidated_dict_09_25_2024_13_32_21  consolidated_dict_09_25_2024_13_32_36  consolidated_dict_10_07_2024_21_31_59  consolidated_dict_10_08_2024_15_27_21  final_dict.json  final_dict_test_01_26_2024_11_48_49
src/tests/core/: test_genetic_algo.py  test_member.py
tests/core/: test_genetic_algo.py  test_match_finder.py  test_member.py  test_utilities.py
tests/core/genetic_algorithm/: test_member.py  (+6 more)
tests/integration/: test_optimization_flow.py
(+63 files in other folders)
