[build-system]
requires = ["setuptools >= 68", "versioningit ~= 1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hashin_shtrikman_mp"
version = "0.1.2"
description = "Determine the optimal material properties and volume fractions for each component of an n-phase mixture to meet a set of desired composite material properties."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "emmet-core>=0.74.5",
    "matplotlib-stubs>=0.2.0",
    "monty>=2023.11.3",
    "mp-api>=0.39.1",
    "mpi4py>=3.1.5",
    "mpcontribs-client>=5.10.0",
    "nbformat>=4.2.0",
    "numpy>=1.26.2",
    "pandas>=2.2.0",
    "pydantic>=2.5.0",
    "pydantic-core>=2.14.1",
    "pydantic-settings>=2.1.0",
    "pytest>=8.3.4"
]

# Move the tests section outside the [project] section
[project.optional-dependencies]
tests = ["pytest"]
docs = [
    "jupyter_contrib_nbextensions>=0.7.0",
    "notebook==6.4.12",
    "mkdocs>=1.4.0",
    "mkdocs-autorefs>=0.4.1",
    "mkdocs-jupyter>=0.24.6",
    "mkdocs-section-index>=0.3.4",
    "mkdocstrings>=0.19.0",
    "mkdocstrings-python>=0.7.1",
    "pymdown-extensions>=9.6",
]
dev = [
    "ruff>=0.4.10",
    "isort"
]

[project.urls]
repository = "https://github.com/carlacupcake/hashin_shtrikman_mp"
changelog = "https://github.com/carlacupcake/hashin_shtrikman_mp/.chglog/CHANGELOG.tpl.md"

[tool.ruff]
target-version = "py310"
output-format = "concise"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",  # Missing type annotation for *arg
    "ANN003",  # Missing type annotation for **kwargs
    "ANN401",  # typing.Any disallowed
    "ANN101",  # requiring self types
    "ARG002",  # unused method argument
    "C408",    # Unnecessary (dict/list/tuple) call - remove call
    "C901",    # function too complex
    "COM812",  # trailing comma missing
    "D401",    # Imperative mood in docstring
    "EM",      # exception message must not use f-string literal
    "ERA001",  # found commented out code
    "FBT001",
    "FBT002",
    "FIX002",
    "G004",    # logging uses f-string
    "ISC001",
    "PD011",   # pandas-use-of-dot-values
    "PERF203", # try-except-in-loop
    "PLR0911", # too many returns
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many local statements
    "PLR2004",
    "PT006",   # pytest-parametrize-names-wrong-type
    "PT013",   # pytest-incorrect-pytest-import
    "PTH",     # prefer Pathlib to os.path
    "RUF013",  # implicit-optional
    "S324",    # use of insecure hash function
    "S507",    # paramiko auto trust
    "S603",    # use of insecure subprocess
    "TD",      # todos
    "TRY003",  # long message outside exception class
]
pydocstyle.convention = "numpy"
isort.split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["ANN", "ARG001", "D", "INP001", "PLR2004", "S101"]
# flake8-type-checking (TCH): things inside TYPE_CHECKING aren't available
#     at runtime and so can't be used by pydantic models
# flake8-future-annotations (FA): pipe operator for type unions only work in pydantic models in python 3.10+
"**/schemas/*" = ["FA", "TCH", "UP007"]
"**/schemas.py" = ["FA", "TCH", "UP007"]
"**/settings.py" = ["FA", "TCH", "UP007"]
"docs/*" = ["INP001"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"hashin_shtrikman_mp.io.inputs.data" = ["*.yaml"]
